--- a/var/www/uauditweb/login.html
+++ b/var/www/uauditweb/login.html
@@ -13,6 +13,8 @@
 </head>
 
 <body onload="javascript:ajaxLoginStart()">
+    <input type="hidden" id="csrfToken" value="BADTOKEN" />
+
     <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
         <div class="container">
             <div class="card login-card">
@@ -20,28 +22,29 @@
                     <div class="col-md-5">
                         <img src="assets/images/login.jpg" alt="login" class="login-card-img">
                     </div>
+
                     <div class="col-md-7">
-                        <div class="card-body">
-                            <div class="brand-wrapper">
-                                <img src="assets/images/logo.jpg" alt="logo" class="logo">
-                                <p class="login-card-header-text" id="version"></p>
-                                <p class="login-card-header-message" id="message">_</p>
-                            </div>
-                            <p class="login-card-description">Sign into your account</p>
-                            <form action="#!">
-                                <div class="form-group">
-                                    <label for="username" class="sr-only">Username</label>
-                                    <input type="username" name="username" id="username" class="form-control"
-                                        placeholder="Username">
+                        <div class="card-body  align-items-center justify-content-center">
+
+                            <table width=100% id=""><tr><td align="center">
+                                <div class="brand-wrapper">
+                                    <img src="assets/images/logo.jpg" alt="logo" class="logo">
+                                    <p class="login-card-header-text text-center" id="version"></p>
+                                    <p class="login-card-header-message text-center" id="message">_</p>
                                 </div>
-                                <div class="form-group mb-4">
-                                    <label for="password" class="sr-only">Password</label>
-                                    <input type="password" name="password" id="password" class="form-control"
-                                        placeholder="***********">
-                                </div>
-                                <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button"
-                                    value="Login" onclick="javascript:ajaxLogin()">
-                            </form>
+                            </td></tr></table>
+
+                            <table width=100% id="loginform"><tr><td align="center"><form action="#!">
+                                <p class="login-card-description">Sign into your account</p>
+
+                                <div class="form-group"> <label for="username" class="sr-only">Username</label> <input type="username" name="username" id="username" class="form-control" placeholder="Username"> </div>
+                                <div class="form-group mb-4"> <label for="password" class="sr-only">Password</label> <input type="password" name="password" id="password" class="form-control" placeholder="***********"></div>
+                                <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button" value="Login" onclick="javascript:ajaxLogin()">
+                            </form></td></tr></table>
+
+                            <table width=100% id="logoutform"><tr><td align="center"><form action="#!">
+                                <input name="logout" id="logout" class="btn btn-block login-btn mb-4" type="button" value="Logout" onclick="javascript:ajaxLogout()">
+                            </form></td></tr></table>
                         </div>
                     </div>
                 </div>
