--- a/uanlz_web/var/www/uauditweb/inc.header.html
+++ b/uanlz_web/var/www/uauditweb/inc.header.html
@@ -13,9 +13,9 @@
     <link href="/assets/css/progress.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/select.css" rel="stylesheet" type="text/css"> 
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
-    <script src="/assets/js/cx2passwd.js" type="text/javascript"></script>
-    <script src="/assets/js/cx2validations.js" type="text/javascript"></script>
-    <script src="/assets/js/cx2main.js" type="text/javascript"></script>
+    <script src="/assets/js/mantids_passwd.js" type="text/javascript"></script>
+    <script src="/assets/js/mantids_validations.js" type="text/javascript"></script>
+    <script src="/assets/js/mantids_main.js" type="text/javascript"></script>
 </head>
 
 <body onload="javascript:ajaxLoadInfo();">
@@ -60,6 +60,6 @@
     </header>
 
     <main role="main" style="padding-top: 68px">
-            <h4 style="color: black; padding-left: 20px; text-shadow: 2px 2px 5px rgb(131, 131, 131);" id="apptitle"> <b>CX2</b> Authentication Server </h4>
+            <h4 style="color: black; padding-left: 20px; text-shadow: 2px 2px 5px rgb(131, 131, 131);" id="apptitle"> uAuditAnalyzer </h4>
         <hr>
         
