--- a/uanlz_web/var/www/uauditweb/login.html
+++ b/uanlz_web/var/www/uauditweb/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/assets/css/login.css" type="text/css">
     <script src="/assets/js/jquery-3.5.1.min.js" type="text/javascript"></script>
-    <script src="/assets/js/cx2login.js" type="text/javascript"></script>
+    <script src="/assets/js/mantids_login.js" type="text/javascript"></script>
 </head>
 
 <body onload="javascript:ajaxLoginStart()">
